rule-of-three: Blacklist QSet. It's fixed in Qt 5.7

BUG: 355486